--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "nodejs login with jwt token",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "node server.js",
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "dev": "nodemon server.js"
+    
   },
   "keywords": [
     "nodejs",
